--- a/style.css
+++ b/style.css
@@ -1573,7 +1573,7 @@ html {
 
 /* Right Side Accordion */
 .faq-content-side h2 {
-    font-size: 3rem;
+    font-size: 34px;
     margin-bottom: 50px;
     line-height: 1.1;
 }
@@ -1593,8 +1593,9 @@ html {
     align-items: center;
     cursor: pointer;
     font-weight: 700;
-    font-size: 0.9rem;
+    font-size: 16px;
     letter-spacing: 0.5px;
+    text-transform: uppercase;
     color: var(--primary-black);
 }
 
@@ -1805,29 +1806,29 @@ footer p {
 }
 
 .footer-top-left {
-    width: 35%;
+    width: 50%;
 }
 
 .footer-logo img {
     width: 160px;
 }
 
-/* .footer-top-left p {
+.footer-top-left p {
     margin-top: 20px;
     opacity: 0.9;
-    width: 90%;
+    width: 70%;
     line-height: 1.4;
-} */
+}
 
 .footer-com-detail {
-    margin-top: 30px;
+    margin-top: 10px;
 }
 
 
 .footer-top-right {
     display: flex;
     justify-content: space-between;
-    width: 65%;
+    width: 50%;
     gap: 20px;
 }
 
@@ -1925,17 +1926,18 @@ footer p {
 
 .policy-header-card {
     background: #ffffff;
-    padding: 60px 40px;
+    padding: 40px;
     border-radius: 24px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
     text-align: center;
-    max-width: 1100px;
+    max-width: 1400px;
+    margin: auto;
     width: 100%;
 }
 
 .breadcrumb {
     font-size: 0.9rem;
-    margin-bottom: 25px;
+    margin-bottom: 10px;
 }
 
 .breadcrumb a {
@@ -1955,9 +1957,9 @@ footer p {
 }
 
 .policy-header-card h1 {
-    font-size: 4rem;
+    font-size: 50px;
     color: #000;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     letter-spacing: -1px;
 }
 
@@ -1999,4 +2001,18 @@ footer p {
 
 .policy-col strong {
     color: #000;
+}
+
+
+
+
+
+
+
+
+
+
+/* cppv page */
+.cppv-container {
+    text-align: center;
 }
